Revision history for WWW::Mechanize

{{$NEXT}}

2.11      2022-07-17 17:25:39Z
    [FIXED]
    - tick() can now handle checkboxes without a value (GH#331) (Jordan M Adler
      and Julien Fiegehenn)

    [ENHANCEMENTS]
    - set_fields() and submit_form(with_fields => ...) can now set multiple
      choice inputs (e.g. select and radio) to the nth value (GH29) (Alastair
      Douglas and Julien Fiegehenn)

2.10      2022-07-04 21:06:13Z

    [ENHANCEMENTS]
    - Added form_action($action) to look up forms by regex matching $action (GH#19)
      (Mark Leighton Fisher and Julien Fiegehenn)

    [DOCUMENTATION]
    - Explain that file URIs need url encoding (GH#329) (Julien Fiegehenn and
      積丹尼 Dan Jacobson)

2.09      2022-06-14 14:20:04Z
    [DOCUMENTATION]
    - Various POD fixes (Julien Fiegehenn)

2.08      2022-05-30 17:32:33Z
    [TESTS]
    - Drop CGI and HTTP::Server::Simple::CGI test dependencies (GH#327) (Graham
      Knop)

2.07      2022-04-29 15:39:17Z
    [FIXED]
    - Don't follow redirects in some tests (GH#326) (Olaf Alders)

2.06      2021-10-25 20:56:12Z
    [DOCUMENTATION]
    - Document methods that don't work with :content_file (GH#219) (Julien Fiegehenn)

2.05      2021-09-21 14:06:00Z
    [DOCUMENTATION]
    - Update docs for protocols_allowed and protocols_forbidden (GH#323) (Olaf
      Alders)

2.04      2021-08-06 12:28:31Z
    [ENHANCEMENTS]
    - Add a head() method to allow relative URLs (GH#321) (Julien Fiegehenn)

    [DOCUMENTATION]
    - Document that form_id() accepts an id, not a name (GH#319) (Olaf Alders)
    - Clarify documentation (GH#320) (Julien Fiegehenn)

2.03      2020-11-10 14:47:04Z
    [FIXED]
    - Validate exclusive button selectors (GH#314) (Ferenc Erki)

2.02      2020-10-13 13:50:28Z
    [ENHANCEMENTS]
    - Add redirects() as a short to HTTP::Response->redirects (GH#116) (Julien Fiegehenn)
    - click_button( value => $foo) now also works for button tags and image buttons